<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>


	<parent>
		<groupId>com</groupId>
		<artifactId>constructxpert-services</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath> <!-- chemin relatif vers le fichier parent pom.xml -->
	</parent>

	<artifactId>task-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>task-service</name>
	<description>Task Service module for ConstructionXpert</description>

	<properties>
		<java.version>17</java.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<start-class>com.task_service.TaskServiceApplication</start-class>
		<sonar.projectKey>expert-microservice</sonar.projectKey>

		<sonar.host.url>http://localhost:9000</sonar.host.url>

	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
		<dependency>
			<groupId>org.sonarsource.scanner.maven</groupId>
			<artifactId>sonar-maven-plugin</artifactId>
			<version>3.9.1.2184</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>com.task_service.TaskServiceApplication</mainClass>
					<layout>JAR</layout>
					<jvmArguments>
						<jvmArgument>--enable-preview</jvmArgument>
					</jvmArguments>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>
<!--			<plugin>-->
<!--				<groupId>org.sonarsource.scanner.maven</groupId>-->
<!--				<artifactId>sonar-maven-plugin</artifactId>-->
<!--				<version>3.3.0.603</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<phase>verify</phase>-->
<!--						<goals>-->
<!--							<goal>sonar</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
		</plugins>
	</build>
</project>
